force-app-modified/main/default/objects/malfunction__c/malfunction__c.object-meta.xml
<CustomObject>
    <label>תקלה</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>תקלות</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>תקלות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>