force-app-modified/main/default/objects/malfunction__c/fields/finish_date__c.field-meta.xml
<CustomField>
    <fullName>finish_date__c</fullName>
    <label>תאריך יעד לטיפול</label>
    <type>Date</type>
</CustomField>