force-app-modified/main/default/objects/malfunction__c/fields/mal_description__c.field-meta.xml
<CustomField>
    <fullName>mal_description__c</fullName>
    <label>תיאור תקלה</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>