force-app-modified/main/default/objects/malfunction__c/fields/malfunction_status__c.field-meta.xml
<CustomField>
    <fullName>malfunction_status__c</fullName>
    <label>סטטוס תקלה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>פתוח</fullName>
                <default>true</default>
                <label>פתוח</label>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>הסתיים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>