force-app-modified/main/default/objects/malfunction__c/fields/reporter__c.field-meta.xml
<CustomField>
    <fullName>reporter__c</fullName>
    <label>גורם מדווח</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בן</fullName>
            </value>
            <value>
                <fullName>תום</fullName>
            </value>
            <value>
                <fullName>יונתן</fullName>
            </value>
            <value>
                <fullName>דימה</fullName>
            </value>
            <value>
                <fullName>רפי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>