force-app-modified/main/default/objects/malfunction__c/fields/yacht_malfunction__c.field-meta.xml
<CustomField>
    <fullName>yacht_malfunction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>יאכטה</label>
    <referenceTo>Boats__c</referenceTo>
    <relationshipName>yacht_malfunction</relationshipName>
    <type>Lookup</type>
</CustomField>